mob next [ci-skip] [ci skip] [skip ci]

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <title>Sminar</title>
 </head>
 <body>
-    <h1></h1>
+    <h1>Seminar Bewertung</h1>
+    <button type="button" class="btn btn-primary"><a href="upload.html" target="_blank" style="text-decoration: none">Upload</a></button>
 </body>
 </html>
