mob next [ci-skip] [ci skip] [skip ci]
lastFile:src/main/resources/static/upload.html

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Seminar Bewertung</h1>
-    <button type="button" class="btn btn-primary"><a href="upload.html" target="_blank" style="text-decoration: none">Upload</a></button>
+    <button ><a href="upload.html" target="_blank" style="text-decoration: none">Upload</a></button>
 </body>
 </html>
