--- a/src/main/resources/static/upload.html
+++ b/src/main/resources/static/upload.html
@@ -2,9 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Uplad</title>
+    <title>Upload</title>
 </head>
 <body>
     <h1>Upload</h1>
+    <p>Datum Stichtag</p>
+    <form action="/action_page.php" method = "get">
+        <label for= "idtitel"> Titel</label>
+        <input type = "text" id = "idtitel" name="name" maxlength="10"></br>
+        <label for= "idfile">File</label>
+        <input type = "file" id = "idfile" size="100" maxlength="10"></br>
+        <button type="submit">Abschicken</button>
+    </form>
 </body>
 </html>
