Praktikum 1 selber bearbeitet

--- a/src/main/resources/static/upload.html
+++ b/src/main/resources/static/upload.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <title>Upload</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
         <input type = "text" id = "idtitel" name="name" maxlength="10"></br>
         <label for= "idfile">File</label>
         <input type = "file" id = "idfile" size="100" maxlength="10"></br>
-        <button type="submit">Abschicken</button>
+        <button style="margin: 10px 0 0px 20px" class="btn btn-primary" type="submit">Abschicken</button>
     </form>
 </body>
 </html>
