--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -3,10 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
     <title>Sminar</title>
 </head>
 <body>
-    <h1>Seminar Bewertung</h1>
-    <button ><a href="upload.html" target="_blank" style="text-decoration: none">Upload</a></button>
+    <div class="container">
+        <h1>Seminar Bewertung</h1>
+        <button ><a href="upload.html" target="_blank" style="text-decoration: none">Upload</a></button>
+    </div>
+    <div class="container">
+        <h2>SeminarArbeit</h2>
+        <p>Random text</p>
+        <p>Zuständige Studenten</p>
+        <a href="hallo.txt" download>Download</a>
+    </div>
+
+
+    <div class="container">
+        <form action="/action_page.php" method = "get">
+            <div class="mb-3">
+                <label for= "idtitel" class="form-label"> Titel</label>
+                <input  class="form-control" type = "text" id = "idtitel" name="title" maxlength="10">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for= "name">Name</label>
+                <input class="form-control" type = "text" id = "name" maxlength="30" name="name" placeholder="Max Mustermann">
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="zusammenfassung">Zusammenfassung</label>
+                <textarea class="form-control" id="zusammenfassung" name="zusammenfassung" rows="4" cols="50"></textarea>
+            </div>
+            <div class="mb-3">
+                <lable class="form-lable" for="review">Review</lable>
+                <textarea class="form-control" id="review" name="review" rows="4" cols="50"></textarea>
+            </div>
+            <div class="mb-3">
+                <lable class="form-lable" for="verbesserung">Verbesserung</lable>
+                <textarea class="form-control" id="verbesserung" name="verbesserung" rows="4" cols="50"></textarea>
+            </div>
+
+
+            <p>Gesamtbewertung:</p>
+            <fieldset>
+                <input class="form-check-input" type="radio" name="Bewertung" id="mangelhaft" value="Muss im Prinzip neu geschrieben werden">
+                <label class="form-check-label" for="mangelhaft">
+                    Muss im Prinzip neu geschrieben werden
+                </label></br>
+                <input class="form-check-input" type="radio" name="Bewertung" id="ausreichend" value="Erfordert umfangreiche Nachbesserungen">
+                <label class="form-check-label" for="ausreichend">
+                    Erfordert umfangreiche Nachbesserungen
+                </label></br>
+                <input class="form-check-input" type="radio" name="Bewertung" id="befriedigend" value="Erfordert einige Nachbesserungen">
+                <label class="form-check-label" for="befriedigend">
+                    Erfordert einige Nachbesserungen
+                </label></br>
+                <input class="form-check-input" type="radio" name="Bewertung" id="gut" value="Erfordert nur einige kleinere Nachbesserungen">
+                <label class="form-check-label" for="gut">
+                    Erfordert nur einige kleinere Nachbesserungen
+                </label></br>
+            </fieldset>
+
+            <div class="mb-3">
+                <lable class="form-lable" for="mitteilungAnDozent">Mitteilung an Dozent:in</lable>
+                <textarea class="form-control" id="mitteilungAnDozent" name="mitteilungAnDozent" rows="4" cols="50"></textarea>
+            </div>
+
+            <button class="btn btn-primary" type="submit">Abschicken</button>
+        </form>
+    </div>
 </body>
 </html>
